# gitlab-compliance-checker

./: .gitignore  app.py  pyproject.toml  requirements.txt  setup.py  teams.json
.streamlit/: config.toml
gitlab_utils/: batch.py  commits.py  issues.py  merge_requests.py
modes/: batch_mode.py  contribution_mapping.py  user_profile.py
tests/: app.py  batch.py  client.py  commits.py  generate_report.py  groups.py  test_batch_logic.py
user_profile/: profile_utils.py
