[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-compliance-checker"
version = "1.0.0"
description = "A Streamlit web application to verify GitLab project best practices and check user profile README status."
requires-python = ">=3.11"
dependencies = [
    "altair==6.0.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "cachetools==6.2.6",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "gitdb==4.0.12",
    "gitlab-utils==0.1.1",
    "GitPython==3.1.46",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "Jinja2==3.1.6",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "MarkupSafe==3.0.3",
    "narwhals==2.16.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "plotly==6.5.2",
    "protobuf==6.33.5",
    "pyarrow==23.0.1",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-gitlab==8.0.0",
    "pytz==2025.2",
    "referencing==0.37.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.30.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.54.0",
    "tenacity==9.1.4",
    "toml==0.10.2",
    "tornado==6.5.4",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "watchdog==6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
